Bug 57430 - Kget quits without warning when transfers are in progress
Summary: Kget quits without warning when transfers are in progress
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2003-04-18 23:36 UTC by virgilg
Modified: 2007-09-22 17:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description virgilg 2003-04-18 23:36:37 UTC
Version:           v0.8.3 (using KDE 3.1.1)
Compiler:          gcc version 3.2
OS:          Linux (i686) release 2.4.21-pre6

Hello,

I noticed an inconsistency while using kget. If kget's main window is visible and there are transfers in progress, trying to close the window (right-click the icon in the tray, select "close") would bring up a dialog saying "There are transfers in progress. Close? <Yes> <No>". Hit "no", (kget's main window is minimised - why? if it was displayed, leave it on screen) and try to close kget again. We still have transfers in progress, but this time no more questions. Kget simply quits. I noticed that the dialog still wants to be displayed (for a fraction of a second) and then quits.

Hope this helps.

Virgil
Comment 1 Carsten Pfeiffer 2003-05-26 10:40:16 UTC
Subject: Re:  Kget quits without warning when transfers are in progress

On Monday 26 May 2003 03:46, you wrote:

I'll have a look at it mid of June, when I have time, unless someone else 
beats me to it.

Cheers
Carsten Pfeiffer
-----BEGIN PGP SIGNATURE-----

iQEVAwUBPtHSeqWgYMJuwmZtAQEzRwf/Yxdj3P6XZ7gl2nviRAGx3WFgPN4HFyQ6
un1COqhvTOiMjjcewJLIR46VD9BjORxiwwPIpx4K2peY1W6Ync8IgvNY+Qk91Cw1
XYkb74AQ5RLTNpShWXnOw29Weqc5gLSxdDe4F+pyyCJWgvKtp6UvBEUy7xTS/h73
ZTR1sdrMnMVPhy/Jh9Ohg1u0XdRDEg9hgoRFybowZX6f683Q3qfDW1mylRSsAqc7
0L/ye6BV/Fzhl/Ppw6zdHafwRA2C138AfgH1VMcyb47jCiU7BP2YLbk8DsFgDs4P
wOzMJk+5B5bCGlpgyOMdVhiU/9Buf6oD25FR5tnD70NFnFeNu3gheA==
=Vfqn
-----END PGP SIGNATURE-----

Comment 2 Urs Wolfer 2005-07-24 18:28:24 UTC
SVN commit 438216 by uwolfer:

Don't hide mainwindow after canceling quit-warning.

BUG: 57430

Correction in docking.h (my mistake).

 M  +1 -1      docking.h  
 M  +1 -1      kmainwidget.cpp  


--- trunk/KDE/kdenetwork/kget/docking.h #438215:438216
@@ -60,7 +60,7 @@
     ~DockWidget();
     /** No descriptions */
     void updateToolTip( const QString& );
-    void changeIcon( const QString& icon );
+    void changeIcon( const QString& );
 
 
 
--- trunk/KDE/kdenetwork/kget/kmainwidget.cpp #438215:438216
@@ -1586,7 +1586,7 @@
 {
     if( kapp->sessionSaving())
         return true;
-    hide();
+    //hide();
     return false;
 }
 
Comment 3 Urs Wolfer 2005-07-24 18:47:31 UTC
SVN commit 438224 by uwolfer:

Revert my change for bug #57430 because there's an unwanted side effect.

CCBUG: 57430

 M  +1 -1      kmainwidget.cpp  


--- trunk/KDE/kdenetwork/kget/kmainwidget.cpp #438223:438224
@@ -1586,7 +1586,7 @@
 {
     if( kapp->sessionSaving())
         return true;
-    //hide();
+    hide();
     return false;
 }
 
Comment 4 Urs Wolfer 2005-07-24 18:51:53 UTC
See commit message above.
Comment 5 Urs Wolfer 2007-09-22 17:04:35 UTC
This report is not valid anymore for KGet trunk (KDE 4).