Don't hide mainwindow after canceling quit-warning.

BUG: 57430

Correction in docking.h (my mistake).

svn path=/trunk/KDE/kdenetwork/kget/; revision=438216